Update deployment image to version 5

--- a/java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests/deployment.yml
+++ b/java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests/deployment.yml
@@ -16,6 +16,6 @@ spec:
     spec:
       containers:
       - name: spring-boot-app
-        image: debabratapanigrahi/firstimage:replaceImageTag
+        image: debabratapanigrahi/firstimage:5
         ports:
         - containerPort: 8080
